RegularSources = \
	SoFragmentShader.cpp \
	SoGeometryShader.cpp \
	SoGLARBShaderParameter.cpp \
	SoGLARBShaderObject.cpp \
	SoGLARBShaderProgram.cpp \
	SoGLCgShaderObject.cpp \
	SoGLCgShaderParameter.cpp \
	SoGLCgShaderProgram.cpp \
	SoGLSLShaderParameter.cpp \
	SoGLSLShaderObject.cpp \
	SoGLSLShaderProgram.cpp \
	SoGLShaderObject.cpp \
	SoGLShaderParameter.cpp \
	SoGLShaderProgram.cpp \
	SoGLShaderProgramElement.cpp \
	SoShaderObject.cpp \
	SoShaderParameter.cpp \
	SoShaderProgram.cpp \
	SoShader.cpp \
	SoVertexShader.cpp

LinkHackSources = all-shaders-cpp.cpp

PublicHeaders = 

PrivateHeaders = \
	SoShader.h \
	SoGLARBShaderParameter.h \
	SoGLARBShaderObject.h \
	SoGLARBShaderProgram.h \
	SoGLCgShaderObject.h \
	SoGLCgShaderParameter.h \
	SoGLCgShaderProgram.h \
	SoGLSLShaderParameter.h \
	SoGLSLShaderObject.h \
	SoGLSLShaderProgram.h \
	SoGLShaderParameter.h \
	SoGLShaderObject.h \
	SoGLShaderProgram.h

ObsoleteHeaders =

ExtraIncludeDirs = -I$(top_builddir)

##$ BEGIN TEMPLATE Make-Common(shaders, nodes)
# **************************************************************************
# This template depends on the following variables having been set up before
# its invokation.
#
# PublicHeaders    - header files that should be installed
# PrivateHeaders   - source files that should be distributed, but not
#                    installed - including source-included source files.
# RegularSources   - source files compiled in this directory
# LinkHackSources  - alternative source files used on -enable-compact compilation
# ObsoletedHeaders - header files that should be removed upon installation

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

DISTCLEANFILES = \
	ii_files/*.ii

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
ExtraSources = $(RegularSources)
else
BuildSources = $(RegularSources)
ExtraSources = $(LinkHackSources)
endif

if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libshaders@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libshaders.la
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

DEFAULT_INCLUDES = -I$(top_builddir)/include -I$(top_srcdir)/include $(ExtraIncludeDirs) -I$(top_builddir)/src -I$(top_srcdir)/src

# header installation
if MAC_FRAMEWORK
libshadersincdir = $(MAC_FRAMEWORK_PREFIX)/$(MAC_FRAMEWORK_NAME).framework/Versions/$(MAC_FRAMEWORK_VERSION)/Headers/nodes
# hack to change libdir value when installing Mac OS X compiler framework
lib@nop@dir = $(MAC_FRAMEWORK_PREFIX)/$(MAC_FRAMEWORK_NAME).framework/Versions/$(MAC_FRAMEWORK_VERSION)/Libraries
else
libshadersincdir = $(includedir)/Inventor/nodes
endif
libshadersinc_HEADERS = $(PublicHeaders)

libshaders_la_SOURCES = $(BuildSources)
EXTRA_libshaders_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(ExtraSources)

libshaders@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libshaders@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(ExtraSources)

install-libshadersincHEADERS: $(libshadersinc_HEADERS)
	@$(NORMAL_INSTALL)
	@if test x"$(libshadersinc_HEADERS)" = x""; then :; else \
	  echo " $(mkinstalldirs) $(DESTDIR)$(libshadersincdir)"; \
	  $(mkinstalldirs) $(DESTDIR)$(libshadersincdir); \
	fi
	@list='$(libshadersinc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libshadersincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst" || exit 1; \
	  fi \
	done
	@list='$(ObsoletedHeaders)'; for f in $$list; do \
	  file="$(DESTDIR)$(libshadersincdir)/$$f"; \
	  if test -x "$$file"; then \
	    echo " rm -f $$file"; \
	    rm -f "$$file"; \
	  fi \
	done; \
	:

if MACOSX
# When using --enable-hacking, the user tends to manually replace some 
# of the installed libraries by symlinks back to the build directory. 
# But Mac OS X's install program refuses to overwrite symlinks => we 
# have to explicitly remove existing symlinks before installation.
install-exec-local:
	@for file in $(DESTDIR)$(lib@nop@dir)/libshaders@SUFFIX@LINKHACK*.dylib; do \
	  if test -L "$$file"; then \
	    rm -f "$$file"; \
	  fi \
	done; 
else 
install-exec-local:
endif

install-symlinks:
	@echo "Creating symlink to libshaders@SUFFIX@LINKHACK*@LIBEXT@*"; \
        for dir in $(SUBDIRS) ; do \
          (cd $$dir; $(MAKE) install-symlinks;) \
        done ; \
        here=`pwd`; \
	(cd $(DESTDIR)$(lib@nop@dir); \
	for file in libshaders@SUFFIX@LINKHACK*@LIBEXT@*; do \
	  ln -sf "$$here/.libs/$$file" "$$file"; \
	done; \
        cd -; )
##$ END TEMPLATE Make-Common
